# DynamicLighting

./: .gitattributes  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: Game.h
app/src/: Game.cpp  Main.cpp
engine/: CMakeLists.txt
engine/include/: BaseGame.h  CollidableShape.h  FpsCounter.h  LightSource.h  Line.h  MathHelper.h  Nullable.h  Nullable.inl  Random.h
engine/src/: BaseGame.cpp  CollidableShape.cpp  FpsCounter.cpp  LightSource.cpp  Line.cpp  MathHelper.cpp  Random.cpp
include/: BaseGame.h  CollidableShape.h  CollidableShape.hpp  Colors.hpp  CustomMath.h  FpsCounter.hpp  Game.h  Game.hpp  LightSource.h  LightSource.hpp  Line.h  Line.hpp  Math.h  Math.hpp  MathHelper.h  Nullable.h  Nullable.hpp  Nullable.inl  Random.h
src/: BaseGame.cpp  CollidableShape.cpp  Colors.cpp  FpsCounter.cpp  Game.cpp  LightSource.cpp  Line.cpp  Main.cpp  Math.cpp  MathHelper.cpp  Random.cpp
tests/: CMakeLists.txt
tests/src/: CollidableShapeTest.cpp  Main.cpp  MathHelperTest.cpp  NullableTest.cpp  RandomTest.cpp
